--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Hello World
+<h3>Joseph Nguyen's Portfolio Page</h3>
+<p>Coming soon! In the meantime, check out my <a href='http://vietjew.com' target="_blank">comedy website</a>.</p>
