--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
 				<div class="row">
 
 					<div class="span12">
-						<h1>Hire me or I'll kill you</h1>
-							<h3>I'm just another web developer working in
-								Rails and Javascript who has a background in math, philosophy,
-								and stand-up comedy.</h3>
+						<h1>Always a hacker, never a hack</h1>
+							<h3>I'm just another web developer / stand-up comedian
+								looking to ship great code for a great company</h3>
 					</div>
 				</div>
 			</div>
@@ -95,7 +94,7 @@
 				<div class="hr hr-invisible"></div>
 				<div class="row">
 					<div class="span4 i-block">
-						
+
 						<h3><a href="hanoi.html">Towers of Hanoi</a></h3>
 						<p>A fun little puzzle game built in JavaScript.</p>
 					</div>
