Added intro text to Towers of Hanoi

--- a/hanoi.html
+++ b/hanoi.html
@@ -5,6 +5,10 @@
 </head>
 <body>
 <h1>Towers of Hanoi</h1>
+<div class='intro'>Click on a tower to select the pile from which you will move a disc.
+  Click on another tower to move the disc there. You cannot move a disc on top of
+  a smaller disc. The game is won when you have successfully recreated the entire pile
+  on another tower.</div>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src='hanoi.js'></script>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js'></script>
