Updates to contact area

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
 						</div>
 					</div>
 					<div class="span8">
-
-						<iframe width="100%" height="317" frameborder="0" style="border:0" scrolling="no" marginheight="0" marginwidth="0"src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d25229.643600477866!2d-122.41711546871281!3d37.77350419194175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1402351205040"></iframe>
+						<img src='images/jn_headshot.jpg'>
+						<!-- <iframe width="100%" height="317" frameborder="0" style="border:0" scrolling="no" marginheight="0" marginwidth="0"src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d25229.643600477866!2d-122.41711546871281!3d37.77350419194175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1402351205040"></iframe> -->
 					</div>
 					<div class="span4">
 						<h4>My Location</h4>
@@ -162,9 +162,9 @@
 						<hr class="grey"/>
 						<h4>Elsewhere on the Web</h4>
 						<div class="social">
-							<a href="http://www.github.com/vietjew" target="_blank"><img src="images/github_mark.png" alt="github"></i></a>
+							<a href="http://www.linkedin.com/pub/joseph-nguyen/2/aa8/452/" target="_blank"><img src='images/linkedin.png'></a>
+							<a href="http://www.github.com/vietjew" target="_blank"><img src="images/github_mark.png" alt="github"></a>
 							<a href="http://www.facebook.com/vietjew" target="_blank"><img src="images/fb.png" alt="facebook"></a>
-
 						</div>
 
 					</div>
