Adding CNAME file

--- a/index.html
+++ b/index.html
@@ -114,13 +114,12 @@
 							<h2>About Me</h2>
 							<div class="hr hr-small hr-center"><span class="hr-inner"></span></div>
 							<p>Across multiple disciplines, I have learned to adapt quickly
-							and deliver most excellent performance.</p>
-
+							and consistently perform under pressure.</p>
 						</div>
 						<p class="text-center">
 							I am a web developer with experience in Rails and Javascript, along
 							with a background in math, philosophy, and stand-up comedy
-							(<a href="JN_resume.pdf" target="_blank">see resume</a>).
+							(<a href="JN_resume.pdf" target="_blank">see résumé</a>).
 						</p>
 						<p class="text-center">
 							I am currently looking for a position as a front-end, back-end, or
