--- a/hanoi.html
+++ b/hanoi.html
@@ -2,18 +2,30 @@
 <head>
   <title>Hanoi</title>
   <link href="hanoi.css" rel="stylesheet" type="text/css">
+	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<div class='row'>
+	<div class='col col-xs-2 col-md-2'></div>
+	<div class='col col-xs-8 col-md-8'>
 <h1>Towers of Hanoi</h1>
 <div class='intro'>Click on a tower to select the pile from which you will move a disc.
   Click on another tower to move the disc there. You cannot move a disc on top of
   a smaller disc. The game is won when you have successfully recreated the entire pile
   on another tower.</div>
+</div>
+<div class='col col-xs-2 col-md-2'></div>
+</div>
+<div class='row'>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src='hanoi.js'></script>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js'></script>
+<div class='col col-xs-2 col-md-2'></div>
+<div class='col col-xs-8 col-md-8'>
   <div class="game">
   </div>
+</div>
+<div class='col col-xs-2 col-md-2'></div>
   <script>
 
     var game = new Hanoi.TowersUI();
@@ -22,6 +34,7 @@
   </script>
 <div class='buttoner' id='startover'>Start Over</div>
 <div class='buttoner' id='home'>Back to Portfolio</div>
+</div>
 </body>
 <script>
 
