--- a/hanoi.html
+++ b/hanoi.html
@@ -2,7 +2,7 @@
 <head>
   <title>Hanoi</title>
   <link href="hanoi.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 </head>
 <body class='custom-body'>
 	<div class='container-fluid'>
