Update resume and contact info

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 						<p>San Francisco, CA</p>
 						<hr class="grey"/>
 						<h4>Email</h4>
-						<p>jdnguyen621@gmail.com</p>
+						<p>joe@joenguyen.codes</p>
 						<hr class="grey"/>
 						<h4>Online Profiles</h4>
 						<div class="social">
