--- a/dropbox/index.html
+++ b/dropbox/index.html
@@ -70,12 +70,14 @@
 		</div>
 		<hr>
 		<div id="whatcan" class="row">
-			<div class="col-12">
+			<div class="row">
+				<div class="col-12">
 				<h2>What can Dropbox for <br />
 					Business do for your team?</h2>
 				</div>
-				<div class="col-1">
-				</div>
+			</div>
+			<div class="row">
+				<div class="col-1"></div>
 				<div class="col-2">
 					<img class="arrow" id="leftarrow" src="assets/arrow-left.png">
 				</div>
@@ -95,19 +97,55 @@
 				<div class="col-2">
 					<img class="arrow" id="rightarrow" src="assets/arrow-right.png">
 				</div>
-				<div class="col-1">
-				</div>
+				<div class="col-1"></div>
+			</div>
+				
+			<div class="row">
 				<div class="col-5"></div>
 				<div class="col-2 carousel-circles">
+						<div class="circle gray-circle"></div>
 						<div class="circle blue-circle"></div>
 						<div class="circle blue-circle"></div>
-						<div class="circle blue-circle"></div>
-					</div>
-					<div class="col-5"></div>
 				</div>
-				
+				<div class="col-5"></div>
+			</div>
+			
+			<div class="row">
+				<div class="col-4"> </div>
+				<div class="col-4">
+					<h3>From empowering mobile teams to making sure you never
+						lose a file, Dropbox for Business is designed to help
+						your team work smarter.</h3>
+				</div>
+				<div class="col-4"></div>
+			</div>
+			
+			<div class="row">
+				<div class="col-5"></div>
+				<div class="col-2">
+					<div class="learnbutton round">
+						<h3>Learn more</h3>
+					</div>
+				</div>
+				<div class="col-5"></div>
+			</div>
 		</div>
+
+		<div class="row" id="video">
+			<div class="col-12" id="video-still">
+				<h2><br />Work together simply with<br />
+					Dropbox for Business</h2>
+
+					<img src="assets/player_large.png" id="play-button">
+
+			</div>
+			<div class="col-12" id="video-player">
+				<video controls="controls" width="100%" height="500" name="Dropbox for Business" src="assets/video_dfb_small.mov"></video>
+			</div>
+		</div>
+	
 	</div>
+
 	
   <div class="grid-container outline">
       <div class="row">
@@ -134,14 +172,19 @@
           <div class="col-3"><p>col-3</p></div> 
       </div> 
   </div>
-	<script type="text/javascript" src="carousel.js">
-	</script>
+	<script type="text/javascript" src="carousel.js"></script>
+	<script type="text/javascript" src="video.js"></script>
 	<script>
 		document.getElementById("rightarrow").addEventListener("click", function() {
 			toggleSlide(true);
+			toggleCircle(true);
 		});
 		document.getElementById("leftarrow").addEventListener("click", function() {
 			toggleSlide(false);
+			toggleCircle(false);
+		});
+		document.getElementById("play-button").addEventListener("click", function() {
+			togglePlayer();
 		});
 	</script>
 </body>
