--- a/dropbox/index.html
+++ b/dropbox/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="carousel.css">
 	<link rel="stylesheet" type="text/css" href="animations.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'></head>
+	<script type="text/javascript" src="jquery-1.11.2.min.js"></script>
 <body>
 	<div id="wrapper" class="grid-container">
 		<div id="header" class="row">
@@ -42,21 +43,21 @@
 				<h2>Why Dropbox for Business?</h2>
 			</div>
 			<div class="col-4">
-				<img src="assets/dropbox-for-business-why-devices.png">
+				<img class="image-slide no-delay" src="assets/dropbox-for-business-why-devices.png">
 				<h2>The power to do more</h2>
 				<h3>Watch productivity soar with the solution loved by over 300 million 
 					users. Let team members instantly sync and share data, so they can 
 					work together from anywhere.</h3>
 			</div>
 			<div class="col-4">
-				<img src="assets/dropbox-for-business-why-watch.png">
+				<img class="image-slide delay-1" src="assets/dropbox-for-business-why-watch.png">
 				<h2>Security inspires confidence</h2>
 				<h3>Dropbox for Business makes data access safe, reliable, and fast. And
 					with powerful admin controls, IT can protect information both inside
 					and outside your organization.</h3>
 			</div>
 			<div class="col-4">
-				<img src="assets/dropbox-for-business-why-key.png">
+				<img class="image-slide delay-2" src="assets/dropbox-for-business-why-key.png">
 				<h2>A smarter investment</h2>
 				<h3>Break the cycle of training sessions, support tickets, and lost 
 					productivity. Give employees the solution they know, and free IT --
