--- a/dropbox/index.html
+++ b/dropbox/index.html
@@ -43,21 +43,21 @@
 				<h2>Why Dropbox for Business?</h2>
 			</div>
 			<div class="col-4">
-				<img class="image-slide no-delay" src="assets/dropbox-for-business-why-devices.png">
+				<img class="why-image hidden image-slide no-delay" src="assets/dropbox-for-business-why-devices.png">
 				<h2>The power to do more</h2>
 				<h3>Watch productivity soar with the solution loved by over 300 million 
 					users. Let team members instantly sync and share data, so they can 
 					work together from anywhere.</h3>
 			</div>
 			<div class="col-4">
-				<img class="image-slide delay-1" src="assets/dropbox-for-business-why-watch.png">
+				<img class="why-image hidden image-slide delay-1" src="assets/dropbox-for-business-why-watch.png">
 				<h2>Security inspires confidence</h2>
 				<h3>Dropbox for Business makes data access safe, reliable, and fast. And
 					with powerful admin controls, IT can protect information both inside
 					and outside your organization.</h3>
 			</div>
 			<div class="col-4">
-				<img class="image-slide delay-2" src="assets/dropbox-for-business-why-key.png">
+				<img class="why-image hidden image-slide delay-2" src="assets/dropbox-for-business-why-key.png">
 				<h2>A smarter investment</h2>
 				<h3>Break the cycle of training sessions, support tickets, and lost 
 					productivity. Give employees the solution they know, and free IT --
@@ -197,7 +197,7 @@
 	</div>
 
 	
- 
+	<script type="text/javascript" src="dropbox.js"></script> 
 	<script type="text/javascript" src="carousel.js"></script>
 	<script type="text/javascript" src="video.js"></script>
 </body>
