Fixed some carousel issues

--- a/dropbox/index.html
+++ b/dropbox/index.html
@@ -73,15 +73,17 @@
 		</div>
 		<hr>
 		<div id="whatcan" class="row">
-
+			<div id="whatcan-title" class="row">
 				<div class="col-12">
 				<h2>What can Dropbox for <br />
 					Business do for your team?</h2>
 				</div>
-
+			</div>
+			
+			<div id="carousel-images" class="row">
 				<div class="col-1"></div>
-				<div class="col-1">
-					<img class="arrow" id="leftarrow" src="assets/arrow-left.png">
+				<div class="col-1 arrow-div">
+						<img class="arrow" id="leftarrow" src="assets/arrow-left.png">
 				</div>
 				<div class="col-8 images">
 					<ul class="carousel">
@@ -96,31 +98,28 @@
 					    </li>
 					</ul>
 				</div>
-				<div class="col-1">
+				<div class="col-1 arrow-div">
 					<img class="arrow" id="rightarrow" src="assets/arrow-right.png">
 				</div>
 				<div class="col-1"></div>
-
+			</div>
 				
-
-
+			<div id="carousel-circles" class="row">
 				<div class="col-12 carousel-circles">
 						<div class="circle gray-circle"></div>
 						<div class="circle blue-circle"></div>
 						<div class="circle blue-circle"></div>
 				</div>
+			</div>
 
-
-			
-
-
+			<div id="whatcan-info" class="row">
 				<div class="col-12">
 					<h3>From empowering mobile teams to making<br />
 						sure you never lose a file, Dropbox for<br />
 						Business is designed to help your team<br />
 						work smarter.</h3>
 				</div>
-
+			</div>
 
 			
 			<div class="row">
