Carousel selection by circle works

--- a/dropbox/index.html
+++ b/dropbox/index.html
@@ -106,9 +106,9 @@
 				
 			<div id="carousel-circles" class="row">
 				<div class="col-12 carousel-circles">
-						<div class="circle gray-circle"></div>
-						<div class="circle blue-circle"></div>
-						<div class="circle blue-circle"></div>
+						<div class="circle gray-circle" id="circle-0"></div>
+						<div class="circle blue-circle" id="circle-1"></div>
+						<div class="circle blue-circle" id="circle-2"></div>
 				</div>
 			</div>
 
