--- a/dropbox/index.html
+++ b/dropbox/index.html
@@ -43,33 +43,32 @@
 				<h2>Why Dropbox for Business?</h2>
 			</div>
 			<div class="col-4">
-				<img class="why-image hidden image-slide no-delay" src="assets/dropbox-for-business-why-devices.png">
+				<img id="no-delay" class="why-image hidden image-slide" src="assets/dropbox-for-business-why-devices.png">
 				<h2>The power to do more</h2>
 				<h3>Watch productivity soar with the solution loved by over 300 million 
 					users. Let team members instantly sync and share data, so they can 
 					work together from anywhere.</h3>
+
 			</div>
 			<div class="col-4">
-				<img class="why-image hidden image-slide delay-1" src="assets/dropbox-for-business-why-watch.png">
+				<img id="delay-1" class="why-image hidden image-slide" src="assets/dropbox-for-business-why-watch.png">
 				<h2>Security inspires confidence</h2>
 				<h3>Dropbox for Business makes data access safe, reliable, and fast. And
 					with powerful admin controls, IT can protect information both inside
 					and outside your organization.</h3>
 			</div>
 			<div class="col-4">
-				<img class="why-image hidden image-slide delay-2" src="assets/dropbox-for-business-why-key.png">
+				<img id="delay-2" class="why-image hidden image-slide" src="assets/dropbox-for-business-why-key.png">
 				<h2>A smarter investment</h2>
 				<h3>Break the cycle of training sessions, support tickets, and lost 
 					productivity. Give employees the solution they know, and free IT --
 					and your team -- to get work done.</h3>
 			</div>
-			<div class="col-5"></div>
-			<div class="col-2">
+			<div class="col-12">
 				<div class="learnbutton round">
 					<h3>Learn more</h3>
 				</div>
 			</div>
-			<div class="col-5"></div>
 		</div>
 		<hr>
 		<div id="whatcan" class="row">
@@ -123,13 +122,11 @@
 
 			
 			<div class="row">
-				<div class="col-5"></div>
-				<div class="col-2">
+				<div class="col-12">
 					<div class="learnbutton round">
 						<h3>Learn more</h3>
 					</div>
 				</div>
-				<div class="col-5"></div>
 			</div>
 		</div>
 
@@ -155,39 +152,39 @@
 		<div class="row footer">
 			<div class="col-2">
 				<p><b>Business</b></p>
-				<p>Home</p>
-				<p>Desktop client</p>
-				<p>Mobile</p>
-				<p>Pricing</p>
+				<p><a href="#">Home</a></p>
+				<p><a href="#">Desktop client</a></p>
+				<p><a href="#">Mobile</a></p>
+				<p><a href="#">Pricing</a></p>
 			</div>
 			<div class="col-2">
 				<p><b>Resources</b></p>
-				<p>Blog</p>
-				<p>Help</p>
-				<p>Partners</p>
-				<p>Documentation</p>
-				<p>Purchasing FAQ</p>
-				<p>Buy</p>
+				<p><a href="#">Blog</a></p>
+				<p><a href="#">Help</a></p>
+				<p><a href="#">Partners</a></p>
+				<p><a href="#">Documentation</a></p>
+				<p><a href="#">Purchasing FAQ</a></p>
+				<p><a href="#">Buy</a></p>
 			</div>
 			<div class="col-2">
 				<p><b>Support</b></p>
-				<p>Help center</p>
-				<p>Get started</p>
-				<p>Contact us</p>
+				<p><a href="#">Help center</a></p>
+				<p><a href="#">Get started</a></p>
+				<p><a href="#">Contact us</a></p>
 			</div>
 			<div class="col-2">
 				<p><b>Community</b></p>
-				<p>Developers</p>
-				<p>Referrals</p>
-				<p>Integrations</p>
+				<p><a href="#">Developers</a></p>
+				<p><a href="#">Referrals</a></p>
+				<p><a href="#">Integrations</a></p>
 			</div>
 			<div class="col-2">
 				<p><b>Connect</b></p>
-				<p>Twitter</p>
-				<p>Facebook</p>
-				<p>Google+</p>
-				<p>YouTube</p>
-				<p>Blogs</p>
+				<p><a href="#">Twitter</a></p>
+				<p><a href="#">Facebook</a></p>
+				<p><a href="#">Google+</a></p>
+				<p><a href="#">YouTube</a></p>
+				<p><a href="#">Blogs</a></p>
 			</div>
 			<div class="col-2" id="language-selector">
 				<p>English</p>
