--- a/dropbox/index.html
+++ b/dropbox/index.html
@@ -10,19 +10,20 @@
 <body>
 	<div id="wrapper" class="grid-container">
 		<div id="header" class="row">
-			<div id="menu" class="col-2">
-					<a href="#"><img src="assets/white_dropbox_glyph@2x.png" width="36" height="34" alt="White Dropbox Glyph@2x"></a>
+			<div id="menu" class="col-1">
+					<a href="#"><img id="db-logo" src="assets/white_dropbox_glyph@2x.png" width="36" height="34" alt="White Dropbox Glyph@2x"></a>
 
-					<h3><a href="#">Business home</a></h3>
+					<h3><b><a href="#">Business</a></b></h3>
+					<h3><b><a href="#">home</a></b></h3>
 					<h3><a href="#">Overview</a></h3>
-					<h3><a href="#">Uses</a><br />
-					<a href="#">Resources</a><br />
-					<a href="#">Customers</a><br />
-					<a href="#">Pricing</a><br />
-					<a href="#">Contact</a></h3>
+					<h3><a href="#">Uses</a></h3>
+					<h3><a href="#">Resources</a></h3>
+					<h3><a href="#">Customers</a></h3>
+					<h3><a href="#">Pricing</a></h3>
+					<h3><a href="#">Contact</a></h3>
 
 			</div>
-			<div class="col-1">
+			<div class="col-2">
 			</div>
 			<div id="teamsync" class="col-6">
 				<h1>Get your team in sync</h1>
@@ -141,10 +142,13 @@
 		<div class="row" id="in-sync">
 			<div class="col-12">
 				<h2>Get your team in sync</h2>
-
+			</div>
+			<div class="col-12">
 				<div class="trybutton bluebutton round">
 					<p>Try it now</p>
 				</div>
+			</div>
+			<div class="col-12">
 				<h3>or buy for $15 / user / month</h3>
 			</div>
 		</div>
@@ -187,7 +191,7 @@
 				<p><a href="#">Blogs</a></p>
 			</div>
 			<div class="col-2" id="language-selector">
-				<p>English</p>
+				<p>&#x1f30e; English</p>
 			</div>
 		</div>
 	</div>
