Fixes in second section

--- a/dropbox/index.html
+++ b/dropbox/index.html
@@ -38,9 +38,12 @@
 
 		
 		<div id="whydropbox" class="row">
-			<div class="col-12">
+			<div class="row">
+			<div id="whydb-header" class="col-12">
 				<h2>Why Dropbox for Business?</h2>
 			</div>
+		</div>
+<div class="row" id="whydb-points">
 			<div class="col-4">
 				<img id="no-delay" class="why-image hidden image-slide" src="assets/dropbox-for-business-why-devices.png">
 				<h2>The power to do more</h2>
@@ -60,14 +63,17 @@
 				<img id="delay-2" class="why-image hidden image-slide" src="assets/dropbox-for-business-why-key.png">
 				<h2>A smarter investment</h2>
 				<h3>Break the cycle of training sessions, support tickets, and lost 
-					productivity. Give employees the solution they know, and free IT --
-					and your team -- to get work done.</h3>
+					productivity. Give employees the solution they know, and free IT &mdash;
+					and your team &mdash; to get work done.</h3>
 			</div>
-			<div class="col-12">
+		</div>
+		<div class="row">
+			<div class="col-12" id="whydb-learnbutton">
 				<div class="learnbutton round">
 					<h3>Learn more</h3>
 				</div>
 			</div>
+		</div>
 		</div>
 		<hr>
 		<div id="whatcan" class="row">
