Carousel button fix

--- a/dropbox/index.html
+++ b/dropbox/index.html
@@ -39,10 +39,12 @@
 		
 		<div id="whydropbox" class="row">
 			<div class="row">
+
 			<div id="whydb-header" class="col-12">
 				<h2>Why Dropbox for Business?</h2>
 			</div>
-		</div>
+
+	</div>
 <div class="row" id="whydb-points">
 			<div class="col-4">
 				<img id="no-delay" class="why-image hidden image-slide" src="assets/dropbox-for-business-why-devices.png">
@@ -76,6 +78,7 @@
 		</div>
 		</div>
 		<hr>
+		
 		<div id="whatcan" class="row">
 			<div id="whatcan-title" class="row">
 				<div class="col-12">
@@ -86,8 +89,10 @@
 			
 			<div id="carousel-images" class="row">
 				<div class="col-1"></div>
-				<div class="col-1 arrow-div">
+				<div class="col-1 left-arrow-div">
+
 						<img class="arrow" id="leftarrow" src="assets/arrow-left.png">
+
 				</div>
 				<div class="col-8 images">
 					<ul class="carousel">
@@ -102,11 +107,15 @@
 					    </li>
 					</ul>
 				</div>
-				<div class="col-1 arrow-div">
-					<img class="arrow" id="rightarrow" src="assets/arrow-right.png">
+				
+				<div class="col-1 right-arrow-div">
+
+						<img class="arrow" id="rightarrow" src="assets/arrow-right.png">
+
 				</div>
 				<div class="col-1"></div>
-			</div>
+				</div>
+
 				
 			<div id="carousel-circles" class="row">
 				<div class="col-12 carousel-circles">
