Firefox compatibility update

--- a/dropbox/index.html
+++ b/dropbox/index.html
@@ -25,7 +25,7 @@
 			</div>
 			<div id="teamsync" class="col-6">
 				<h1>Get your team in sync</h1>
-				<h3>Dropbox for Business lets your team collaborate on<br />
+				<h3 id="tstext">Dropbox for Business lets your team collaborate on<br />
 					important projects anywhere, while keeping IT in control.</h3>
 					<a href="#"><div class="trybutton bizbutton round">
 						<p>Try it free</p>
@@ -89,12 +89,13 @@
 			
 			<div id="carousel-images" class="row">
 				<div class="col-1"></div>
+
 				<div class="col-1 left-arrow-div">
-
-						<img class="arrow" id="leftarrow" src="assets/arrow-left.png">
-
+					<img class="arrow" id="leftarrow" src="assets/arrow-left.png">
 				</div>
+
 				<div class="col-8 images">
+			
 					<ul class="carousel">
 					    <li id="1" class="hideable" style="display: block;">
 					    	<img class="carousel_image" src="assets/BCBG.jpg">
@@ -106,15 +107,14 @@
 					    	<img class="carousel_image" src="assets/centric.jpg">
 					    </li>
 					</ul>
+
 				</div>
 				
 				<div class="col-1 right-arrow-div">
-
-						<img class="arrow" id="rightarrow" src="assets/arrow-right.png">
-
+					<img class="arrow" id="rightarrow" src="assets/arrow-right.png">
 				</div>
 				<div class="col-1"></div>
-				</div>
+			</div>
 
 				
 			<div id="carousel-circles" class="row">
@@ -155,13 +155,10 @@
 		<div class="row" id="in-sync">
 			<div class="col-12">
 				<h2>Get your team in sync</h2>
-			</div>
-			<div class="col-12">
+
 				<div class="trybutton bluebutton round">
 					<p>Try it now</p>
 				</div>
-			</div>
-			<div class="col-12">
 				<h3>or buy for $15 / user / month</h3>
 			</div>
 		</div>
