--- a/flappybird/index.html
+++ b/flappybird/index.html
@@ -10,8 +10,13 @@
 	<div class="wrapper">
 		<canvas id="bird-game"></canvas>
 		<div id="restart-button">
-			<h2>Start / Restart</h2>
+			<h2>Restart</h2>
 		</div>
+		<div id="gameinfo">
+			<h3>Click the Restart button to begin or restart the game. Once the game begins, 
+				click in the frame above to move the bird up.</h3>
+		</div>
+
 	</div>
 	<script charset="utf-8">
 	var canvas = document.getElementById("bird-game");
@@ -21,7 +26,7 @@
 	game.start();
 	document.getElementById('restart-button').addEventListener('click', function(){
 		game = new Game(canvas);
-		game.restart();
+		game.start();
 	});
 	</script>
 </body>
