Update to main page

--- a/index.html
+++ b/index.html
@@ -86,8 +86,12 @@
 
 						<a href="http://teamslap.us" target="_blank"><img src='images/teamslapscreen.jpg'></a>
 					</div>
-					<div class="span4 i-block">
-
+					<div class="span4 i-block" id="flappy">
+						<h3><a href="flappyblue/index.html" target="_blank">Flappy Blue</a></h3>
+						<p>This game was inspired by a wildly popular game (also made by a Nguyen) 
+							featuring a flapping bird.</p>
+							<p>HTML5 Canvas, JavaScript, and CSS are utilized in this fun little 
+								(possibly addictive) game.<p>
 
 					</div>
 				</div>
@@ -109,8 +113,8 @@
 					</div>
 					
 					<div class="span4 i-block">
-						<a href="http://masherydev.tumblr.com/post/98925057107/comedy-hack-day-returns-to-san-francisco-for-a-weekend#note-container" target="_blank">
-							<img src="http://media.tumblr.com/69d08da7260e9c0c7789eb4423f3b9ac/tumblr_inline_ncrc4f9neB1ss6nk3.jpg"></a>
+						<a href="flappyblue/index.html" target="_blank">
+							<img src="images/flappy.png"></a>
 					</div>
 					
 				</div>
