--- a/flappyblue/index.html
+++ b/flappyblue/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Flappy Bird</title>
+	<title>Flappy Blue</title>
 	<script type="text/javascript" src="javascripts/game.js" charset="utf-8"></script>
 	<script type="text/javascript" src="javascripts/bird.js" charset="utf-8"></script>
 	<script type="text/javascript" src="javascripts/level.js" charset="utf-8"></script>
