--- a/dropbox/index.html
+++ b/dropbox/index.html
@@ -51,7 +51,7 @@
 					</div>
 					<div class="row" id="whydb-points">
 						<div class="col-4">
-							<img id="no-delay" class="why-image hidden image-slide" src="assets/dropbox-for-business-why-devices.png">
+							<img id="no-delay" class="why-image-small hidden image-slide" src="assets/dropbox-for-business-why-devices.png">
 							<h2>The power to do more</h2>
 							<h3>Watch productivity soar with the solution loved by over 300 million 
 								users. Let team members instantly sync and share data, so they can 
@@ -59,14 +59,14 @@
 
 							</div>
 							<div class="col-4">
-								<img id="delay-1" class="why-image hidden image-slide" src="assets/dropbox-for-business-why-watch.png">
+								<img id="delay-1" class="why-image-small hidden image-slide" src="assets/dropbox-for-business-why-watch.png">
 								<h2>Security inspires confidence</h2>
 								<h3>Dropbox for Business makes data access safe, reliable, and fast. And
 									with powerful admin controls, IT can protect information both inside
 									and outside your organization.</h3>
 								</div>
 								<div class="col-4">
-									<img id="delay-2" class="why-image hidden image-slide" src="assets/dropbox-for-business-why-key.png">
+									<img id="delay-2" class="why-image-small hidden image-slide" src="assets/dropbox-for-business-why-key.png">
 									<h2>A smarter investment</h2>
 									<h3>Break the cycle of training sessions, support tickets, and lost 
 										productivity. Give employees the solution they know, and free IT &mdash;
