Fixed some html, css

--- a/dropbox/index.html
+++ b/dropbox/index.html
@@ -33,7 +33,7 @@
 				<h3 id="tstext">Dropbox for Business lets your team collaborate on<br />
 					important projects anywhere, while keeping IT in control.</h3>
 				<a href="#"><div class="trybutton bizbutton round">
-						<p>Try it free</p>
+						<h3>Try it free</h3>
 					</div>
 				</a>
 				<h3>or <a href="#">buy for $15 / user / month</a></h3>
@@ -162,10 +162,10 @@
 			<div class="row" id="in-sync">
 				<div class="col-12">
 					<h2>Get your team in sync</h2>
-
-					<div class="trybutton bluebutton round">
-						<p>Try it now</p>
+				<a href="#"><div class="trybutton bluebutton round">
+						<h3>Try it now</h3>
 					</div>
+				</a>
 					<h3>or buy for $15 / user / month</h3>
 				</div>
 			</div>
