--- a/reactsnake/index.html
+++ b/reactsnake/index.html
@@ -7,6 +7,15 @@
 
   </head>
   <body>
+    <div id="game">
+      <div class="instructions">
+        <h2>Welcome to Snake!</h2>
+        <h3>This version of the classic was built using
+          <a href="https://facebook.github.io/react/" target="_blank">React</a>.
+          Use the arrow keys to move. Good luck!</h3>
+      </div>
+      <div id="board"></div>
+    </div>
     <script type="text/jsx" src="js/snake.js.jsx"></script>
   </body>
 </html>
