--- a/reactsnake/index.html
+++ b/reactsnake/index.html
@@ -11,8 +11,8 @@
       <div class="instructions">
         <h2>Welcome to Snake!</h2>
         <h3>This version of the classic was built using
-          <a href="https://facebook.github.io/react/" target="_blank">React</a>.
-          Use the arrow keys to move. Good luck!</h3>
+          <a href="https://facebook.github.io/react/" target="_blank">React</a>.<br />
+					Use the arrow keys to move. Good luck!</h3>
       </div>
       <div id="board"></div>
     </div>
