--- a/reactsnake/index.html
+++ b/reactsnake/index.html
@@ -16,5 +16,8 @@
       <div id="board"></div>
     </div>
     <script type="text/jsx" src="js/snake.js.jsx"></script>
+		<script type="text/jsx">
+					newGame(15);
+		</script>
   </body>
 </html>
