Minor styling updates

--- a/reactsnake/index.html
+++ b/reactsnake/index.html
@@ -11,7 +11,7 @@
         <h2>Welcome to Snake!</h2>
         <h3>This version of the classic was built using
           <a href="https://facebook.github.io/react/" target="_blank">React</a>.<br />
-					Use the arrow keys to move. Good luck!</h3>
+					Choose a board size then use the arrow keys to move. Good luck!</h3>
       </div>
       <div id="board"></div>
     </div>
