Refactor and precompile JSX

--- a/reactsnake/index.html
+++ b/reactsnake/index.html
@@ -2,8 +2,8 @@
   <head>
     <title>React Snake</title>
     <link rel="stylesheet" href="snake.css" media="screen" title="no title" charset="utf-8">
-    <script src="js/react.js"></script>
-    <script src="js/JSXTransformer.js"></script>
+    <script src="build/react.js"></script>
+    <script src="build/JSXTransformer.js"></script>
   </head>
   <body>
     <div id="game">
@@ -15,9 +15,6 @@
       </div>
       <div id="board"></div>
     </div>
-    <script type="text/jsx" src="js/snake.js.jsx"></script>
-		<script type="text/jsx">
-
-		</script>
+    <script src="build/snake.js.js"></script>
   </body>
 </html>
