Update project images, descriptions and style.

--- a/index.html
+++ b/index.html
@@ -76,45 +76,46 @@
 				</div>
 				<div class="row">
 					<div class="span4 i-block">
-
+						<p><br /></p>
 						<h3><a href="http://teamslap.us" target="_blank">TeamSlap</a></h3>
 						<p>TeamSlap is a sports application allowing users to create and manage leagues and teams. Players can indicate their availability for
 							each game and managers can create starting lineups from available players by dragging their names to avilable, custom positions.</p>
 						<p>Powered by Ruby on Rails, AJAX and jQuery UI.</p>
 					</div>
-					<div class="span4 i-block">
-
-						<a href="http://teamslap.us" target="_blank"><img src='images/teamslapscreen.jpg'></a>
+					<div class="span4 i-block" id="teamslap-image">
+						<a href="http://teamslap.us" target="_blank"><img src='images/teamslap.png'></a>
 					</div>
+
 					<div class="span4 i-block" id="flappy">
 						<h3><a href="flappyblue/index.html" target="_blank">Flappy Blue</a></h3>
 						<p>This game was inspired by a wildly popular game (also made by a Nguyen)
-							featuring a flapping bird.</p>
-							<p>HTML5 Canvas, JavaScript, and CSS are utilized in this fun little
-								(possibly addictive) game.<p>
+							featuring a flapping bird. Built using HTML5 Canvas, JavaScript, and CSS</p>
 
+						<img src="images/flappy_small.png" />
 					</div>
 				</div>
 				<div class="hr hr-invisible"></div>
 				<div class="row">
 					<div class="span4 i-block">
 						<p><br /><br /><br> </p>
-						<h3><a href="http://imahugefan.herokuapp.com" target="_blank">I'm A Huge Fan</a></h3>
-						<p>App built for <a href="http://www.comedyhackday.org" target="_blank">Comedy Hack Day</a>
-							that lets you discreetly generate talking points about movies or music so you can keep up with conversations
-							you know nothing about.</p>
-							<p>Event finalist, awarded prize for Best Use of Intel Mashery APIs.</p>
+						<h3><a href="reactsnake/index.html" target="_blank">Snake!</a></h3>
+						<p>A classic game rebuilt for the web browser using
+							<a href="https://facebook.github.io/react/" target="_blank">React.js</a>.</p>
 					</div>
 
 					<div class="span4 i-block">
-						<p> </p>
-						<p><br /></p>
-						<a href="http://www.comedyhackday.org" target="_blank"><img src="http://i.vimeocdn.com/video/435749671_640.jpg"></a>
+						<a href="reactsnake/index.html" target="_blank">
+							<img src="images/snake.png"></a>
 					</div>
 
 					<div class="span4 i-block">
-						<a href="flappyblue/index.html" target="_blank">
-							<img src="images/flappy.png"></a>
+							<p><br /></p>
+							<h3><a href="http://imahugefan.herokuapp.com" target="_blank">I'm A Huge Fan</a></h3>
+							<p>App built for <a href="http://www.comedyhackday.org" target="_blank">Comedy Hack Day</a>
+								that lets you discreetly generate talking points about movies or music so you can keep up with conversations
+								you know nothing about.</p>
+								<p>Event finalist, won prize for Best Use of Intel Mashery APIs.</p>
+
 					</div>
 
 				</div>
